tests/compile-fail/no_starting_state.stderr
error: expected `:`
  --> $DIR/no_starting_state.rs:6:17
   |
6  |       transitions {
   |  _________________^
7  | |         //~ ERROR No starting state defined, indicate the starting state with a *
8  | |         State1 + Event1 = State2,
9  | |         State2 + Event2 = State3,
10 | |     }
   | |_____^
